--- a/main/index.html
+++ b/main/index.html
@@ -31,7 +31,7 @@
       <header class="header">
         <div class="container container--width-100@mobile">
           <div class="hero bg-circle bg-primary">
-            <div class="hero__article | text-component | text-center text-left@md">
+            <div class="hero__article text-center text-left@md">
               <h1>Award-winning custom designs and digital branding solutions</h1>
               <p>With over 10 years in the industry, we are experienced in creating fully responsive websites, app design,
               and engaging brand experiences. Find out more about our services.</p>
