--- a/main/about.html
+++ b/main/about.html
@@ -55,14 +55,14 @@
       <main>
         <section class="talent">
           <div class="container container--width-100@mobile">
-            <div class="photo-card ">
+            <div class="photo-card">
               <div class="photo-card__photo">
                 <img
                   sizes="(min-width: 1024px) 476px, (min-width: 768px) 689px, 375px"
                   srcset="assets/images/about/desktop/image-world-class-talent.jpg 476w, assets/images/about/tablet/image-world-class-talent.jpg 689w, assets/images/about/mobile/image-world-class-talent.jpg 375w"
                   src="assets/images/about/mobile/image-world-class-talent.jpg" alt="woman standing looking at photos on wall">
               </div>
-              <div class="photo-card__content | bg-primary-lighter bg-three-circles">
+              <div class="photo-card__content | bg-primary-lighter bg-circle">
                 <h2 class="color-primary">World-class talent</h2>
                 <p>We are a crew of strategists, problem-solvers, and technologists. Every design is thoughtfully
                 crafted from concept to launch, ensuring success in its given market. We are constantly updating
@@ -124,7 +124,7 @@
                   srcset="assets/images/about/desktop/image-real-deal.jpg 476w, assets/images/about/tablet/image-real-deal.jpg 689w, assets/images/about/mobile/image-real-deal.jpg 375w"
                   src="assets/images/about/desktop/image-real-deal.jpg" alt="tow hands holding corners of photo taped to wall">
               </div>
-              <div class="photo-card__content |  bg-primary-lighter bg-three-circles">
+              <div class="photo-card__content |  bg-primary-lighter bg-circle">
                 <h2 class="color-primary">The real deal</h2>
                 <p>As strategic partners in our clients’ businesses, we are ready to take on any challenge as our own.
                 Solving real problems require empathy and collaboration, and we strive to bring a fresh perspective to every
