--- a/main/locations.html
+++ b/main/locations.html
@@ -8,6 +8,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@400;500&display=swap" rel="stylesheet">
     <link id="codyframe" rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/leaflet/leaflet.css" />
+   <script src="assets/js/leaflet/leaflet.js"></script>
     <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
     <title>Frontend Mentor | Designo Agency Website Challenge</title>
   </head>
@@ -34,77 +36,118 @@
 
       <header class="header">
         <div class="container container--width-100@mobile">
+          <div class="map-cards">
+            <div class="map-card">
+              <div class="map-card__map map-card__map--right">
+                <div id="mapToronto"></div>
+              </div>
+              <div class="map-card__intro | bg-primary-lighter bg-circle">
+                <h1 class="color-primary">Canada</h1>
+                <div>
+                  <p class="text-bold">Designo Central Office</p>
+                  <p>3886 Wellington Street</p>
+                  <p>Toronto, Ontario M9C 3J5</p>
+                </div>
+                <div>
+                  <p class="text-bold">Contact</p>
+                  <p>P : +1 253-863-8967</p>
+                  <p>M : contact@designo.co</p>
+                </div>
+              </div>
+            </div>
 
-          <div class="map-card">
-            <div class="map-card__image map-card__image--right">
-              <img sizes="(min-width: 1024px) 375px, (min-width: 768px) 689px, 375px"
-                srcset="assets/images/locations/desktop/image-map-canada.png 375w, assets/images/locations/tablet/image-map-canada.png 689w"
-                src="assets/images/locations/desktop/image-map-canada.png" alt="map of canada">
-            </div>
-            <div class="map-card__intro | bg-primary-lighter bg-circle">
-              <h1 class="color-primary">Canada</h1>
-              <div>
-                <p class="text-bold">Designo Central Office</p>
-                <p>3886 Wellington Street</p>
-                <p>Toronto, Ontario M9C 3J5</p>
+            <div class="map-card">
+              <div class="map-card__map">
+                <div id="mapNewSouthWales"></div>
               </div>
-              <div>
-                <p class="text-bold">Contact</p>
-                <p>P : +1 253-863-8967</p>
-                <p>M : contact@designo.co</p>
+              <div class="map-card__intro | bg-primary-lighter bg-circle">
+                <h1 class="color-primary">Australia</h1>
+                <div>
+                  <p class="text-bold">Designo Central Office</p>
+                  <p>19 Balonne Street</p>
+                  <p>New South Wales 2443</p>
+                </div>
+                <div>
+                  <p class="text-bold">Contact</p>
+                  <p>P : (02) 6720 9092</p>
+                  <p>M : contact@designo.co</p>
+                </div>
               </div>
             </div>
+
+            <div class="map-card">
+              <div class="map-card__map map-card__map--right">
+                <div id="mapRhydyfro"></div>
+              </div>
+              <div class="map-card__intro | bg-primary-lighter bg-circle">
+                <h1 class="color-primary">United Kingdom</h1>
+                <div>
+                  <p class="text-bold">Designo Central Office</p>
+                  <p>13 Colorado Way</p>
+                  <p>Rhyd-y-fro SA8 9GA</p>
+                </div>
+                <div>
+                  <p class="text-bold">Contact</p>
+                  <p>P : 078 3115 1400</p>
+                  <p>M : contact@designo.uk</p>
+                </div>
+              </div>
+            </div>
+
           </div>
+
 
         </div>
       </header>
-  </div>
-  Our Company
-  Locations
-  Contact
 
-  Canada
-  Designo Central Office
-  3886 Wellington Street
-  Toronto, Ontario M9C 3J5
-
-  Contact
-  P : +1 253-863-8967
-  M : contact@designo.co
-
-  Australia
-  Designo AU Office
-  19 Balonne Street
-  New South Wales 2443
-
-  Contact
-  P : (02) 6720 9092
-  M : contact@designo.au
-
-  United Kingdom
-  Designo UK Office
-  13 Colorado Way
-  Rhyd-y-fro SA8 9GA
-
-  Contact
-  P : 078 3115 1400
-  M : contact@designo.uk
-
-  Let’s talk about your project
-  Ready to take it to the next level? Contact us today and find out how our expertise can
-  help your business grow.
-  Get in touch
-
-  Our company
-  Locations
-  Contact
-
-  Designo Central Office
-  3886 Wellington Street
-  Toronto, Ontario M9C 3J5
-
-  Contact Us (Central Office)
-  P : +1 253-863-8967
-  M : contact@designo.co
-</body>
+      <main>
+        <section class="cta">
+          <div class="container">
+            <div class="wide-card |  bg-primary">
+              <div class="text-component | text-center text-left@md">
+                <h2 class="wide-card__title">Let’s talk about your project</h2>
+                <p class="wide-card__text">Ready to take it to the next level? Contact us today and find out how our expertise
+                  can help your business grow.</p>
+              </div>
+              <div class="btn btn--subtle">Get in touch</div>
+            </div>
+          </div>
+        </section>
+      </main>
+      <footer class="footer bg-black-light">
+        <div class="container">
+          <nav class="nav">
+            <div class="nav__logo__container">
+              <img class="nav__logo" src="./assets/images/shared/desktop/logo-light.png" alt="designo logo">
+            </div>
+            <ul class="nav__list | text-center">
+              <li><a href="about.html">Our Company</a></li>
+              <li><a href="locations.html">Locations</a></li>
+              <li><a href="contact.html">Contact</a></li>
+            </ul>
+          </nav>
+          <div class="contact">
+            <div class="contact__address text-component">
+              <p class="text-bold">Designo Central Office</p>
+              <p>3886 Wellington Street</p>
+              <p>Toronto, Ontario M9C 3J5</p>
+            </div>
+            <div class="contact__phone text-component">
+              <p class="text-bold">Contact Us (Central Office)</p>
+              <p class="text-bold">P : +1 253-863-8967</p>
+              <p class="text-bold">M : contact@designo.co</p>
+            </div>
+            <div class="contact__social">
+              <img src="./assets/images/shared/desktop/icon-facebook.svg" alt="facebook icon">
+              <img src="./assets/images/shared/desktop/icon-youtube.svg" alt="youtube icon">
+              <img src="./assets/images/shared/desktop/icon-twitter.svg" alt="twitter icon">
+              <img src="./assets/images/shared/desktop/icon-pinterest.svg" alt="pinterest icon">
+              <img src="./assets/images/shared/desktop/icon-instagram.svg" alt="instagram icon">
+            </div>
+          </div>
+        </div>
+      </footer>
+    </div>
+    <script src="assets/js/scripts.js"></script>
+  </body>
 </html>
