--- a/main/index.html
+++ b/main/index.html
@@ -30,13 +30,13 @@
 
       <header class="header">
         <div class="container container--width-100@mobile">
-          <div class="hero bg-circle bg-primary">
-            <div class="hero__article | text-center text-left@md | flow-content">
+          <div class="hero | bg-primary | bg-circle ">
+            <div class="hero__text | text-component">
               <h1>Award-winning custom designs and digital branding solutions</h1>
               <p>With over 10 years in the industry, we are experienced in creating fully responsive websites, app design,
               and engaging brand experiences. Find out more about our services.</p>
-              <a class="btn btn--subtle" href="about.html">Learn more</a>
             </div>
+            <a class="btn btn--subtle" href="about.html">Learn more</a>
             <div class="hero__image"><img src="assets/images/home/desktop/image-hero-phone.png" alt=""></div>
           </div>
         </div>
