--- a/main/graphic-design.html
+++ b/main/graphic-design.html
@@ -34,7 +34,7 @@
 
       <header class="header">
         <div class="container container--width-100@mobile">
-          <div class="design-card | bg-primary">
+          <div class="design-card | bg-primary | text-component">
             <h1>Graphic Design</h1>
             <p class="responsive-text">We deliver eye-catching branding materials that are tailored to meet your business objectives.</p>
           </div>
