--- a/main/web-design.html
+++ b/main/web-design.html
@@ -34,7 +34,7 @@
 
       <header class="header">
         <div class="container container--width-100@mobile">
-          <div class="design-card | bg-primary">
+          <div class="design-card | bg-primary | text-component">
             <h1>Web design</h1>
             <p class="responsive-text">We build websites that serve as powerful marketing tools and bring memorable brand experiences.</p>
           </div>
